Починить тест test_incorrectPassword https://github.com/AlibabaRazboinik/habit_tracker/issues/55
