# src/main/java/com/example/habitstracker/controllers/AuthApiImpl.java
@@ -1,5 +1,6 @@
 package com.example.habitstracker.controllers;
 
+import com.example.openapi.dto.LoginPasswordDTO;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -32,7 +33,7 @@ public class AuthApiImpl implements AuthApi
     }
 
     @Override
-    public ResponseEntity<Void> login(UserDTO userDTO)
+    public ResponseEntity<Void> login(LoginPasswordDTO loginPasswordDTO)
     {
         // stub for swagger
         return ResponseEntity.ok().build();
